# SPDX-FileCopyrightText: AppThreat <cloud@appthreat.com>
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "blint-db"
version = "0.1.0"
description = ""
authors = ["Aryan Rajoria <aryanrajoria1003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
blint = "^2.2.3"
meson = "^1.6.0"
oras = "^0.2.24"

[tool.poetry.scripts]
blint-db = 'blint_db.cli:main'

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[tool.poetry.group.build.dependencies]
poetry = "^1.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
