[project]
name = "blint-db"
version = "0.2.0"
description = "Symbols database for OWASP blint"
authors = [
  {name= "Team AppThreat", email = "cloud@appthreat.com"},
]
dependencies = [
    "blint",
    "meson>=1.7.0",
    "ninja>=1.11.1.3",
    "oras>=0.2.25",
]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["linter", "binary", "security", "sast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AppThreat/blint-db"
Bug-Tracker = "https://github.com/AppThreat/blint-db/issues"


[project.scripts]
blint-db = 'blint_db.cli:main'

[project.optional-dependencies]
dev = [
    "isort>=6.0.0",
    "black>=25.1.0",
    "flake8>=7.1.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages = ["blint_db", "blint_db.projects_compiler", "blint_db.utils", "blint_db.handlers", "blint_db.handlers.language_handlers"]

[tool.uv.sources]
blint = { git = "https://github.com/owasp-dep-scan/blint", rev = "4a0d17355cf95e9f61cad9021dd9c7983602e430" }
