[project]
name = "blint-db"
version = "2.0.0"
description = "Symbols database for OWASP blint"
license = { file = "LICENSE" }
authors = [
  {name= "Team AppThreat", email = "cloud@appthreat.com"},
]
dependencies = [
    "blint",
    "conan>=2.28.0",
    "huggingface-hub>=1.12.2",
    "meson>=1.11.1",
    "ninja>=1.13.0",
    "oras>=0.2.42",
]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["linter", "binary", "security", "sast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AppThreat/blint-db"
Bug-Tracker = "https://github.com/AppThreat/blint-db/issues"


[project.scripts]
blint-db = 'blint_db.cli:main'

[project.optional-dependencies]
extended = [
    "nyxstone>=0.1.1",
]
dev = [
    "pytest>=9.0.3",
    "isort>=8.0.1",
    "black>=26.3.1",
    "flake8>=7.3.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages = ["blint_db", "blint_db.projects_compiler", "blint_db.utils", "blint_db.handlers", "blint_db.handlers.language_handlers"]

[tool.setuptools.package-data]
blint_db = ["inputs/*.csv"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv.sources]
blint = { git = "https://github.com/owasp-dep-scan/blint", rev = "22b182d78393e357d88e16a50267c335d51f9670" }
